修复URL bug