@@ -42,7 +42,6 @@ public class PostgreSqlDao {
 
 
     public PostgreSqlDao(String ip, String port, String database, String username, String password, String timeout) throws Exception {
-        String tempFileString = "file://";
         // 从配置文件读取变量
         YamlConfigs configs = new YamlConfigs();
         Map<String, Object> yamlToMap = configs.getYamlToMap("config.yaml");
@@ -59,11 +58,9 @@ public class PostgreSqlDao {
         URLCLASSLOADER = (URLClassLoader) ClassLoader.getSystemClassLoader();
         METHOD = URLClassLoader.class.getDeclaredMethod("addURL", URL.class);
         METHOD.setAccessible(true);
-        //判断是否是 windows 是的话需要多加一个斜杠
-        if(System.getProperty("os.name").toLowerCase().contains("windows")){
-            tempFileString = "file:///";
-        }
-        METHOD.invoke(URLCLASSLOADER, new URL(tempFileString + JARFILE));
+        // 将路径转为 url 类型进行加载，修复系统路径不兼容问题
+        URL url = (new File(JARFILE)).toURI().toURL();
+        METHOD.invoke(URLCLASSLOADER, url);
         Class.forName(DRIVER);
     }
 
